k3s_cluster/base/default/template/scratch/calico-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-python-to-nginx-only
  namespace: app-mesh
spec:
  podSelector:
    matchLabels:
      app: nginx-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: python-app
      ports:
        - port: 80
