k3s_cluster/base/default/template/scratch/linkerd-policies.yaml
# 3. AUTHORIZATIONPOLICY - Binds it all together: ONLY python-sa can access Nginx[reference:4]
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-python-to-nginx
  namespace: app-mesh
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: nginx-server
  requiredAuthenticationRefs:
    - name: python-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
